@@ -1,3 +1,8 @@
+2002-10-26  Gary Thomas  <gthomas@ecoscentric.com> (inspired by)
+2002-10-26  Gordon Schumacher <gordon_schumacher@maxtor.com>
+
+	* include/hal_sa11x0.h: Make ROM/RAM/FLASH space layout clearer.
+
 2002-10-25  Gary Thomas  <gthomas@ecoscentric.com> (inspired by)
 2002-10-25  Gordon Schumacher <gordon_schumacher@maxtor.com>
 
